--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.1.x",
-        "natxet/CssMin": "dev-master",
-        "linkorb/jsmin-php": "dev-master"
+        "linkorb/jsmin-php": "dev-master",
+        "natxet/CssMin": "dev-master"
     },
     "autoload": {
         "psr-0": {
